kubernetes/apps/infra-cluster/monitoring/uptime-kuma-infra/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    gethomepage.dev/description: "External availability monitoring"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Infra Cluster - monitoring"
    gethomepage.dev/href: "https://uptime.krapulax.dev"
    gethomepage.dev/icon: "uptime-kuma.png"
    gethomepage.dev/name: "Uptime Kuma"
    gethomepage.dev/weight: "20"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
  hostnames:
    - uptime.krapulax.dev
  rules:
    - backendRefs:
        - name: uptime-kuma
          namespace: monitoring
          port: 3001
